classDiagram
    %% ── 新增数据模型 ──
    class ImportResult {
        +u32 imported
        +u32 skipped_duplicates
        +u32 skipped_invalid
    }
    class OpmlOutline {
        +String title
        +String xml_url
    }

    %% ── 新增服务 ──
    class OpmlService {
        +build_opml(subs: Vec~Subscription~) String$
        +parse_opml(xml: &str) Vec~OpmlOutline~$
    }

    %% ── 现有模型（引用，不重复设计）──
    class Subscription {
        +String id
        +String url
        +String platform
        +String channel_name
        +String channel_avatar_url
        +bool paused
        +String quality_preset
        +String created_at
    }

    class AppSettings {
        +bool notifications_enabled
        +String download_dir
        +u32 check_interval_minutes
        +String yt_dlp_path
        +String quality_preset
        +bool dark_mode
        +String proxy_url
    }

    class DownloadRecord {
        +String id
        +String subscription_id
        +String video_title
        +String video_url
        +String file_path
        +u64 file_size
        +String status
        +String downloaded_at
    }

    %% ── 关系 ──
    OpmlService ..> Subscription : reads url/channel_name
    OpmlService ..> OpmlOutline : produces
    ImportResult ..> Subscription : batch creates
    Subscription "1" --> "*" DownloadRecord : has records
    AppSettings --> Subscription : notifications_enabled affects
